<resources>
    <string name="app_name">ActSem2</string>
    <string name="nombre">Nombre Completo</string>
    <string name="telefono">Teléfono</string>
    <string name="email">Email</string>
    <string name="descripcion">Descripción Contacto</string>
    <string name="boton">Siguiente</string>
    <string name="title_activity_detalles">Detalles</string>
    <string name="txtConfirmar">Confirmar Datos</string>
    <string name="btnEditar">Editar Datos</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
</resources>